# fathlib

./: .clang-format  .gitignore  LICENSE  README.md  pyproject.toml
fathlib/: __init__.py  core.pyi
include/: common.h  cow.h  fath.h  generic.h  join.h  normalize.h  posix.h  windows.h
include/posix/: fath.h  join.h  normalize.h  view.h
include/windows/: drive.h  fath.h  join.h  normalize.h  view.h
src/: common.c  cow.c  fath.c  fathlib.c  generic.c  join.c  normalize.c  posix.c  windows.c
src/posix/: fath.c  join.c  normalize.c  view.c
src/windows/: drive.c  fath.c  join.c  normalize.c  view.c
test/: benchmark.py  test_fathlib.py
