[project]
name = "fathlib"
version = "0.1.0"
description = "A faster pathlib"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fathlib"]

[[tool.setuptools.ext-modules]]
name = "fathlib.core"
sources = [
    "src/fathlib.c",
    "src/generic.c",
    "src/join.c",
    "src/normalize.c",
    "src/posix.c",
    "src/windows.c",
]
include-dirs = ["include"]
depends = [
    "include/generic.h",
    "include/join.h",
    "include/normalize.h",
    "include/posix.h",
    "include/windows.h",
]
extra-compile-args = ["-Wall", "-std=c17"]
