[project]
name = "fathlib"
version = "0.1.0"
description = "A faster pathlib"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fathlib"]

[[tool.setuptools.ext-modules]]
name = "fathlib.core"
sources = [
    "src/posix/fath.c",
    "src/posix/join.c",
    "src/posix/normalize.c",
    "src/windows/fath.c",
    "src/windows/normalize.c",
    "src/common.c",
    "src/fath.c",
    "src/fathlib.c",
]
depends = [
    "include/posix/fath.h",
    "include/posix/join.h",
    "include/posix/normalize.h",
    "include/windows/fath.h",
    "include/windows/normalize.h",
    "include/common.h",
    "include/fath.h",
]
include-dirs = ["include"]
extra-compile-args = ["-Wall", "-std=c17"]
